user add edit (should be working)